--- a/WebContent/Alunos.html
+++ b/WebContent/Alunos.html
@@ -5,7 +5,7 @@
 <title>Alunos</title>
 </head>
 <body>
-<!--<form action="manter_alunos.do" method="post"><br>-->
+<form action="manter_alunos.do" method="post"><br>
 	Nome: <input type="text" name = "nome"><br>
 	Cpf: <input type="number" name = "cpf"><br>
 	rg: <input type="text" name = "rg"><br>
@@ -16,6 +16,7 @@
 	<input type="submit" name="acao" value="Alterar">
 	<input type="submit" name="acao" value="Consultar">
 	<input type="submit" name="acao" value="Deletar">
-
+	
+</form>
 </body>
 </html>
