--- a/WebContent/Cursos.html
+++ b/WebContent/Cursos.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<form action="manter_cursos.do" method="post"><br>
+
 	Codigo: <input type="text" name = "codigo"><br>
 	Nome: <input type="text" name = "nome"><br>
 	Numero Laboratorio: <input type="text" name = "numLab"><br>
@@ -17,11 +19,11 @@
 	Horario: <input type="text" name = "horario"><br>
 	Vagas: <input type="number" name = "vagas"><br>
 	Valor: <input type="number" name = "valor"><br>
-	
 	<input type="submit" name="acao" value="Cadastrar">
 	<input type="submit" name="acao" value="Alterar">
 	<input type="submit" name="acao" value="Consultar">
 	<input type="submit" name="acao" value="Deletar">
-
+	
+</form>
 </body>
 </html>
