--- a/WebContent/Alunos.html
+++ b/WebContent/Alunos.html
@@ -5,6 +5,7 @@
 <title>Alunos</title>
 </head>
 <body>
+<h3>Cadastro de alunos</h3>
 <form action="manter_alunos.do" method="post"><br>
 	Nome: <input type="text" name = "nome"><br>
 	Cpf: <input type="number" name = "cpf"><br>
