--- a/WebContent/Cursos.html
+++ b/WebContent/Cursos.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>Cadastro de alunos</h3>
+<h3>Cadastro de Cursos</h3>
 <form action="manter_cursos.do" method="post"><br>
 
 	Codigo: <input type="text" name = "codigo"><br>
